# signal-alert-receiver

./: .gitignore  Cargo.toml  LICENSE
src/: main.rs
src/audio/: player.rs
src/bootstrap/: mod.rs  serial.rs  ui.rs
src/platform/windows/: audio.rs
